--- a/languages/En.txt
+++ b/languages/En.txt
@@ -22,5 +22,12 @@ Follow the instructions and in a few hours, you have the wealth !!!
 Remote control usage
 Tips
 You can stop the Bot when you want by pressing 'Escap'
-https://www.youtube.com/watch?v=7nwJVvcnlFg&t=126s
+https://www.youtube.com/@tatouprod/featured
+Help the developer by promoting the bot during mining ?
+By checking 'Yes', your penguin will advertise for the bot
+It's a way for you to acknowledge the developer :)
+Few
+Medium
+Many
+Promotional amount:
 26
